Remove yearly summary, shift Data Learn columns, fix login issue, update toast notifications

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1676,7 +1676,7 @@ body {
 
   position: fixed;
 
-  bottom: 24px;
+  top: 75px;
 
   right: 24px;
 
@@ -1751,6 +1751,10 @@ body {
 
 
 .toast-message {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 
   font-size: 0.9rem;
 
